REOPENED234352
REGRESSION(r284368) [GStreamer] Image tests often don't render the player
https://bugs.webkit.org/show_bug.cgi?id=234352
Summary REGRESSION(r284368) [GStreamer] Image tests often don't render the player
Arcady Goldmints-Orlov
Reported 2021-12-15 10:00:56 PST
The test imported/w3c/web-platform-tests/media-source/mediasource-video-is-visible.html has started failing as of r284368. The test does some XHR requests to get a video file that just shows a static blue rectangle, but after the revision in question, the expected blue square is not visible anymore.
Attachments
Patch (3.78 KB, patch)
2021-12-17 07:51 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2021-12-17 07:51:18 PST
EWS
Comment 2 2021-12-22 00:46:01 PST
Committed r287349 (245491@main): <https://commits.webkit.org/245491@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447456 [details].
Radar WebKit Bug Importer
Comment 3 2021-12-22 00:47:15 PST
Arcady Goldmints-Orlov
Comment 4 2021-12-22 11:00:25 PST
Sadly this test still fails. The video is visible now, there is a blue square as expected but the actual blue square is the color #0100ff and what the test wants is #0000ff. So close.
Philippe Normand
Comment 5 2021-12-22 11:34:09 PST
It was passing when I submitted the patch but I haven't checked since then. Maybe some of the recent changes around colorspace handling broke it again. Please open a new bug or rebaseline accordingly :)
Philippe Normand
Comment 6 2021-12-22 12:02:16 PST
Reverting r287323 gets me a blu^Wgreen test again, fwiw. Maybe this should be flagged as a fuzzy test.
Alicia Boya García
Comment 7 2023-03-27 06:14:39 PDT
r260879 (2023-02-27) was the last build in the bots where this passed in GTK. It has been failing in Release since, while mostly passing in Debug.
Alicia Boya García
Comment 8 2023-03-27 06:20:32 PDT
(In reply to Alicia Boya García from comment #7) > r260879 (2023-02-27) was the last build in the bots where this passed in > GTK. It has been failing in Release since, while mostly passing in Debug. Wrong revision due to repo changes... Anyway. I've noticed this is a problem with more tests. It seems that the test runner fails to capture video image in the GStreamer ports: imported/w3c/web-platform-tests/media-source/mediasource-video-is-visible.html media/media-source/media-source-video-renders.html media/track/track-webvtt-no-snap-to-lines-overlap.html media/track/track-webvtt-snap-to-lines-inline-style.html media/track/track-webvtt-snap-to-lines-left-right.html media/video-with-alpha.html
Philippe Normand
Comment 9 2023-03-27 06:23:15 PDT
Claudio Saavedra
Comment 10 2026-02-10 08:23:13 PST
Someone more familiar with this should check this, but I noticed that most of the tests gardened under this bug are actually passing most of the times, with very rarely a timeout and no image failures. I am updating the expectations like this: diff --git a/LayoutTests/platform/glib/TestExpectations b/LayoutTests/platform/glib/TestExpectations index bead8eafeed3..6d8b724ccea9 100644 --- a/LayoutTests/platform/glib/TestExpectations +++ b/LayoutTests/platform/glib/TestExpectations @@ -1660,10 +1660,9 @@ webkit.org/b/211995 fast/images/animated-image-mp4.html [ Failure Timeout ] # Player is often not rendering in image tests, especially in Release webkit.org/b/234352 imported/w3c/web-platform-tests/media-source/mediasource-video-is-visible.html [ ImageOnlyFailure Pass ] webkit.org/b/234352 media/media-source/media-source-video-renders.html [ ImageOnlyFailure Pass ] -webkit.org/b/234352 media/track/track-webvtt-no-snap-to-lines-overlap.html [ ImageOnlyFailure Pass ] -webkit.org/b/234352 media/track/track-webvtt-snap-to-lines-inline-style.html [ ImageOnlyFailure Pass ] -webkit.org/b/234352 media/track/track-webvtt-snap-to-lines-left-right.html [ ImageOnlyFailure Pass ] -webkit.org/b/234352 media/video-with-alpha.html [ ImageOnlyFailure Pass ] +webkit.org/b/234352 media/track/track-webvtt-no-snap-to-lines-overlap.html [ Timeout Pass ] +webkit.org/b/234352 media/track/track-webvtt-snap-to-lines-inline-style.html [ Timeout Pass ] +webkit.org/b/234352 media/track/track-webvtt-snap-to-lines-left-right.html [ Timeout Pass ] Check for more details: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fmedia-source%2Fmediasource-video-is-visible.html&test=media%2Fmedia-source%2Fmedia-source-video-renders.html&test=media%2Fvideo-with-alpha.html&test=media%2Ftrack%2Ftrack-webvtt-snap-to-lines-left-right.html&test=media%2Ftrack%2Ftrack-webvtt-snap-to-lines-inline-style.html&test=media%2Ftrack%2Ftrack-webvtt-no-snap-to-lines-overlap.html&platform=GTK&platform=WPE
Note You need to log in before you can comment on or make changes to this bug.