REGRESSION(r284368) [GStreamer] test imported/w3c/web-platform-tests/media-source/mediasource-video-is-visible.html fails on GTK and WPE https://bugs.webkit.org/show_bug.cgi?id=234352

Patch by Philippe Normand <pnormand@igalia.com> on 2021-12-22
Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

r284368 introduced a new behavior in the GL sink where any downstream not being a tag event
was triggering a flush in the media player, which was not originally intended.

* platform/graphics/gstreamer/GLVideoSinkGStreamer.cpp:
(webKitGLVideoSinkSetMediaPlayerPrivate):

LayoutTests:

* platform/glib/TestExpectations:


Canonical link: https://commits.webkit.org/245491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287349 268f45cc-cd09-0410-ab3c-d52691b4dbfc